[project]
name = "flux-2-klein-lora-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "av>=17.1.0",
    "bitsandbytes>=0.49.2",
    "diffusers",
    "gradio==6.19.0",
    "hf-xet>=1.5.1",
    "huggingface-hub>=1.21.0",
    "numpy>=2.2.6",
    "peft>=0.19.1",
    "sentencepiece>=0.2.1",
    "spaces>=0.50.4",
    "torch==2.11.0",
    "torchvision>=0.26.0",
    "transformers==5.9.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
